[package]
name = "x4_universe_data"
version = "0.1.0"
authors = ["albysmith <48844001+albysmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"